[package]
name = "nfc-sys"
version = "0.1.0"
authors = ["Daniel Griffin <danielseangriffin@gmail.com>"]
description = "FFI bindings for the libnfc library"
documentation = "https://github.com/dsgriffin/nfc-sys"
homepage = "https://github.com/dsgriffin/nfc-sys"
repository = "https://github.com/dsgriffin/nfc-sys"
readme = "README.md"
keywords = ["device", "communication", "ffi"]
license = "MIT"

[dependencies]
libc = "0.2.0"